--- a/Nintendo-Quiz-Main.css
+++ b/Nintendo-Quiz-Main.css
@@ -350,7 +350,7 @@ input[type="radio"]:checked {
   border: 2px solid rgb(202, 4, 4);
   border-radius: 100px;
   height: 120px;
-  width: 120;
+  width: 120px;
   margin: 5px;
 }
 
